--- a/ChwaPa-n/css/style.css
+++ b/ChwaPa-n/css/style.css
@@ -181,7 +181,8 @@ header.active .navbar-brand {
 }
 
 .navbar-default .navbar-nav > li > a {
-    color: #7d7d7d;
+    color: #4E37A1;
+    font-style: italic;
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
