--- a/CodeV0.2/app/src/main/res/layout/fragment_graphe.xml
+++ b/CodeV0.2/app/src/main/res/layout/fragment_graphe.xml
@@ -8,13 +8,14 @@
     <com.intrusoft.scatter.PieChart
         android:id="@+id/pie_chart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="313dp"
         android:layout_above="@+id/footer"
         scatter:aboutChart="Cycle Menstruel"
-        scatter:aboutTextColor="@color/colorPrimary"
-        scatter:centerColor="@color/colorAccent"
-        scatter:chartColor="#0D47A1"
+        scatter:aboutTextColor="#ffffff"
+        scatter:centerColor="#40bd4c"
+        scatter:chartColor="#0076f9"
         scatter:equalPartition="false"
-        scatter:textColor="@color/colorAccent" />
+        scatter:textColor="#ffffff"
+        android:layout_marginTop="70dp" />
 
 </LinearLayout>
