--- a/CodeV0.2/app/src/main/res/layout/fragment_info.xml
+++ b/CodeV0.2/app/src/main/res/layout/fragment_info.xml
@@ -81,6 +81,7 @@
                     android:fontFamily="casual"
                     android:text="Parametre"
                     android:textColor="@color/accent_material_light" />
+
                 <Button
                     style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                     android:id="@+id/accepterButton"
@@ -91,11 +92,13 @@
                     android:text="Partager"
                     android:fontFamily="casual"
                     android:textColor="@color/accent_material_light" />
+
             </LinearLayout>
         </LinearLayout>
 
 
     </android.support.v7.widget.CardView>
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -202,7 +205,19 @@
     </LinearLayout>
     <TextView
         android:layout_gravity="center"
-        android:text="En quete de reponses ? www.chwapam.com"
+        android:text="En quete de reponses ?"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:fontFamily="casual" />
+
+    <TextView
+        android:text="www.chwapam.com"
+        android:layout_width="177dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        android:layout_marginLeft="128dp"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:fontFamily="casual" />
 </LinearLayout>
