--- a/convertible/css/style.css
+++ b/convertible/css/style.css
@@ -158,6 +158,7 @@ header.active .navbar-brand {
 .navbar-default .navbar-nav {
     margin-top: 0px;
     margin-bottom: 0px;
+
 }
 
 .navbar-default .navbar-nav > li {
@@ -294,6 +295,7 @@ h3 {
     font-weight: 300;
     margin: 0;
     margin-bottom: 22px;
+
 }
 
 h4 {
@@ -313,8 +315,8 @@ h5 {
 }
 
 p {
-    color: #9a9a9a;
-    font-size: 13px;
+    color: blue;
+    font-size: 20px;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     margin: 0;
