--- a/CodeV0.2/app/src/main/res/menu/activity_main_drawer.xml
+++ b/CodeV0.2/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_schedule"
             android:title="Planing naturel" />
         <item
             android:id="@+id/nav_gallery"
