--- a/CodeV0.2/app/src/main/res/layout/content_main.xml
+++ b/CodeV0.2/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,18 @@
     tools:context="com.example.root.codev02.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView8" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView12" />
+
     <in.myinnos.imagesliderwithswipeslibrary.SliderLayout
         android:id="@+id/slider"
         android:layout_width="match_parent"
@@ -21,5 +33,9 @@
         custom:auto_cycle="true"
         custom:indicator_visibility="visible"
         custom:pager_animation="Stack"
-        custom:pager_animation_span="1100" />
+        custom:pager_animation_span="1100"
+        android:layout_marginTop="165dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
