--- a/CodeV0.2/app/src/main/res/layout/fragment_info.xml
+++ b/CodeV0.2/app/src/main/res/layout/fragment_info.xml
@@ -12,11 +12,11 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:id="@+id/textView3"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="casual"
         android:textSize="16sp"
-        android:text="Jour 7, 02-01,2017" />
+        android:text="Jour 7, 04-23-2017" />
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -122,17 +122,17 @@
                 android:layout_height="wrap_content">
                 <ImageView
                     android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_weight="0.53"
                     android:src="@mipmap/ic_launcher"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="65dp" />
 
                 <TextView
                     android:layout_gravity="center"
                     android:linksClickable="true"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Link1"
+                    android:layout_weight="0.30"
+                    android:text="Sterilet"
                     android:textAlignment="center" />
             </LinearLayout>
             <LinearLayout
@@ -161,26 +161,29 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content">
+
                 <ImageView
                     android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_weight="0.04"
                     android:src="@mipmap/ic_launcher"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="63dp" />
 
                 <TextView
                     android:layout_gravity="center"
                     android:linksClickable="true"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Link1"
+                    android:text="Preservatifs"
                     android:textAlignment="center" />
+
             </LinearLayout>
+
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="0dp"
@@ -203,21 +206,24 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
     <TextView
         android:layout_gravity="center"
         android:text="En quete de reponses ?"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:fontFamily="casual" />
+        android:fontFamily="casual"
+        android:layout_marginLeft="10dp" />
 
     <TextView
         android:text="www.chwapam.com"
         android:layout_width="177dp"
         android:layout_height="wrap_content"
         android:id="@+id/textView4"
-        android:layout_marginLeft="128dp"
+        android:layout_marginLeft="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:fontFamily="casual" />
+        android:fontFamily="casual"
+        android:autoLink="web" />
 </LinearLayout>
