--- a/CodeV0.2/app/src/main/res/layout/activity_login.xml
+++ b/CodeV0.2/app/src/main/res/layout/activity_login.xml
@@ -107,12 +107,14 @@
             <Button
                 android:id="@+id/email_sign_in_button"
                 style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
+                android:layout_width="269dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/action_sign_in"
                 android:textStyle="bold"
-                android:fontFamily="casual" />
+                android:fontFamily="casual"
+                android:layout_marginLeft="25dp"
+                android:background="@color/colorPrimary" />
 
         </LinearLayout>
     </ScrollView>
